leaderboard header color, fix for keyboard showing on mobile

--- a/WebContent/css/css.css
+++ b/WebContent/css/css.css
@@ -176,6 +176,7 @@ a {
 	color: #fdfdfd;
 }
 
-.th-inner, td {
+.th-inner, td, th {
+	color: #fdfdfd;
 	border-color: black;
 }
